<resources>
    <string name="app_name">SunshineBox</string>

    <!--BaseActivity and BaseFragment-->
    <string name="base_string1">服务器错误，请稍后再试</string>
    <string name="base_string2">001：数据解析错误</string>
    <string name="base_string3">401：服务器系统错误</string>
    <string name="base_string4">402：请求参数错误</string>
    <string name="base_string5">203：未登录</string>
    <string name="base_string6">网络连接失败</string>
    <string name="base_string7">网络连接失败，请检查您的网络设置</string>

    <!--WelcomeActivity-->
    <string name="welcome_act_string1">欢迎来到</string>
    <string name="welcome_act_string3">阳光盒子</string>
    <string name="welcome_act_string2">我们致力于用科技填补城乡教育鸿沟</string>
    <string name="welcome_act_string4">点击激活</string>

    <!--PhoneNumberVerifyActivity-->
    <string name="phone_number_verify_act_string1">请输入您的手机号</string>
    <string name="phone_number_verify_act_string2">输入手机号</string>
    <string name="phone_number_verify_act_string3">手机号</string>
    <string name="phone_number_verify_act_string4">再次发送</string>
    <string name="phone_number_verify_act_string5">请输入正确的手机号码</string>
    <string name="phone_number_verify_act_string6">请输入正确的验证码</string>
    <string name="phone_number_verify_act_string7">验证码</string>
    <string name="phone_number_verify_act_string8">下一步</string>
    <string name="phone_number_verify_act_string9">发送验证码</string>
    <string name="phone_number_verify_act_string10">请输入手机验证码</string>
    <string name="phone_number_verify_act_string11">返回</string>

    <!--PhoneNumberVerifyActivity-->
    <string name="activation_code_verify_act_string1">返回</string>
    <string name="activation_code_verify_act_string2">输入激活码</string>
    <string name="activation_code_verify_act_string3">请输入该手机号对应的激活码</string>
    <string name="activation_code_verify_act_string4">激活码</string>

    <!--HomePageActivity-->
    <string name="home_page_act_string1">再按一次退出程序</string>
    <string name="home_page_act_string2">阳光盒子——给孩子更好的教育</string>
    <string name="home_page_act_string3">音乐</string>
    <string name="home_page_act_string4">阅读</string>
    <string name="home_page_act_string5">儿歌</string>
    <string name="home_page_act_string6">游戏</string>
    <string name="home_page_act_string7">Setting</string>

    <!--SettingActivity-->
    <string name="setting_act_string1">你好，励治</string>
    <string name="setting_act__menu_string1">意见反馈</string>
    <string name="setting_act__menu_string2">使用说明</string>
    <string name="setting_act__menu_string3">特别感谢</string>
    <string name="setting_act__menu_string4">退出激活</string>

    <!--IndexActivity-->
    <string name="index_act_string1">阳光盒子</string>
    <string name="index_act_string2">打开菜单</string>
    <string name="index_act_string3">再按一次退出程序</string>
    <string name="index_act_string4">动作儿歌</string>
    <string name="index_act_string5">听阅读</string>
    <string name="index_act_string6">音乐</string>
    <string name="index_act_string7">做游戏</string>
    <string name="index_act_string8">儿歌</string>
    <string name="index_act_string9">阅读</string>
    <string name="index_act_string10">音乐</string>
    <string name="index_act_string11">游戏</string>

    <!--CourseActivity-->
    <string name="course_act_string1">返回</string>
    <string name="course_act_string2">PLAY音频</string>
    <string name="course_act_string3">PLAY视频</string>
    <string name="course_act_string4">上一课</string>
    <string name="course_act_string5">下一课</string>
    <string name="course_act_string6">下载音频</string>
    <string name="course_act_string7">下载视频</string>
    <string name="course_act_string8">现在开始下载！请尽量不要关闭本页面直至下载结束！</string>
    <string name="course_act_string9">视频下载成功</string>
    <string name="course_act_string10">现在正在下载视频，请稍等片刻哦</string>
    <string name="course_act_string11">现在正在下载音频，请稍等片刻哦</string>
    <string name="course_act_string12">无音频资源</string>
    <string name="course_act_string13">无视频资源</string>
    <string name="course_act_string14">音频下载成功</string>
    <string name="course_act_string15">下载失败，请检查您的网络</string>
    <string name="course_act_string16">已经是最后一节课了！</string>
    <string name="course_act_string17">已经是第一节课了！</string>
    <string name="course_act_string18">请等待下载结束后再切换课程！</string>
    <string name="course_act_string19">本课没有教案</string>
    <string name="course_act_string20">教案下载成功</string>
    <string name="course_act_string21">教案下载失败</string>
    <string name="nav_header_string1">阳光书屋</string>
    <string name="nav_header_string2">http://www.sunshine-library.org/</string>
    <string name="drawer_string1">菜单栏</string>
    <string name="drawer_string2">我的收藏</string>
    <string name="drawer_string3">意见反馈</string>
    <string name="drawer_string4">联系我们</string>
    <string name="drawer_string5">退出激活</string>

</resources>
