<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunshine">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_act_string1"
        android:textColor="#f9f9f9"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        android:text="@string/welcome_act_string3"
        android:textColor="#f9f9f9"
        android:textSize="70sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/welcome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginStart="68dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button_shape"
        android:paddingBottom="15dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:text="@string/welcome_act_string4"
        android:textColor="#f9f9f9"
        android:textSize="25sp" />

</RelativeLayout>
