<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_page_frame_nav_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="92.5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="245dp"
        android:background="@drawable/ic_logo" />

    <ImageButton
        android:id="@+id/setting_act_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_close_black_24dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/logo2" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="350dp"
        android:layout_marginEnd="550dp"
        android:background="@drawable/shape_red_button"
        android:text="@string/setting_act__menu_string2"
        android:textColor="#FF323333" />

    <View
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:background="#000000" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="550dp"
        android:background="@drawable/shape_red_button"
        android:text="@string/setting_act__menu_string3"
        android:textColor="#FF323333" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="550dp"
        android:background="@drawable/shape_red_button"
        android:text="@string/setting_act__menu_string1"
        android:textColor="#FF323333" />

    <Button
        android:id="@+id/setting_act_button2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="550dp"
        android:background="@drawable/shape_red_button"
        android:text="@string/setting_act__menu_string4"
        android:textColor="#FF323333" />

</RelativeLayout>