<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_act_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shaolizhi.sunshinebox.ui.course.CourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/course_act_imagebutton1"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_centerVertical="true"
                    android:background="#00ffffff"
                    android:contentDescription="@string/course_act_string1"
                    android:src="@drawable/ic_arrow_back_black_24dp" />

                <TextView
                    android:id="@+id/course_act_textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/index_act_string1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_weight="724"
                app:cardCornerRadius="20dp">

                <WebView
                    android:id="@+id/course_act_webview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp" />

                <TextView
                    android:id="@+id/course_act_textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/course_act_string19"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:visibility="gone" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="117"
                android:orientation="vertical">

                <Button
                    android:id="@+id/course_act_button1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/course_act_string2"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/course_act_button2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/course_act_string3"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/course_act_button3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray"
                    android:text="@string/course_act_string4"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/course_act_button4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#d85db2"
                    android:text="@string/course_act_string5"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
